# Lee

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  pyproject.toml
aeronaut/: CLAUDE.md  README.md  analysis_options.yaml  pubspec.yaml
aeronaut/ios/Runner/: Info.plist
aeronaut/ios/Runner.xcodeproj/: project.pbxproj
aeronaut/lib/: app.dart  main.dart
aeronaut/lib/models/: hester_models.dart  lee_context.dart  machine.dart
aeronaut/lib/providers/: browser_cast_provider.dart  connection_provider.dart  context_provider.dart  hester_provider.dart  machines_provider.dart  pty_provider.dart  windows_provider.dart
aeronaut/lib/screens/: add_machine_screen.dart  browser_screen.dart  bundles_screen.dart  devops_screen.dart  editor_screen.dart  hester_screen.dart  home_screen.dart  machines_screen.dart  qr_scanner_screen.dart  sessions_screen.dart  terminal_screen.dart
aeronaut/lib/services/: hester_api.dart  lee_api.dart  machine_store.dart
aeronaut/lib/theme/: aeronaut_colors.dart  aeronaut_theme.dart
aeronaut/lib/widgets/: machine_card.dart  machine_switcher.dart  new_tab_sheet.dart  react_phase_indicator.dart  tab_bar.dart  terminal_output.dart  workspace_switcher.dart
aeronaut/test/: widget_test.dart
aeronaut/web/: index.html  manifest.json
dirigible/: .gitignore
dirigible/app/: build.sh  handlers.cpp  screenschema.yaml
dirigible/app/dirigible-app/: app.yaml  handlers.cpp
dirigible/core/: CMakeLists.txt
dirigible/core/include/dirigible/: config.hpp  hester_client.hpp  lee_client.hpp  machine.hpp  models.hpp  pty_client.hpp  state.hpp  transport.hpp
dirigible/core/src/: hester_client.cpp  lee_client.cpp  machine.cpp  models.cpp  pty_client.cpp  state.cpp
dirigible/platform/esp32/components/dirigible-core/: CMakeLists.txt
dirigible/platform/esp32/components/dirigible-esp32/: CMakeLists.txt  config_nvs.cpp  transport_esp.cpp
dirigible/platform/esp32/components/dirigible-esp32/include/dirigible_esp/: config_nvs.hpp  transport_esp.hpp
dirigible/tools/dirigible-provision/: dirigible_provision.py
docs/: 00-Hester-Initial.md  00-Lee-Initial.md  01-Mosaic-Infra.md  02-Hester-Context-Bundles.md  02-Hester-Slack.md  03-Hester-Lee-Context.md  04-Hester-Subagents.md  05-Hester-Proactive-Knowledge-Management.md  06-Hester-Scene-Copilot.md  07-Hester-Proactive-Tasks.md  07-Hester-React-Triage.md  08-Context-Bundle-Proactive-Integration.md  09-Docs-Prune-Archive.md  10-Bespoke-Agent.md  11-Workstream-Architecture.md  12-Workstream-Implementation-Spec.md  Aeronaut.md  DevOps-Config.md  Dirigible.md  Hester-README.md  react-backend-abstraction.md
docs/plans/: 2026-03-05-machines-spyglass-bridge-design.md  2026-03-05-machines-spyglass-bridge-plan.md  2026-03-06-global-config-editor.md
electron/: lee.config.json  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.ts
electron/public/: index.html
electron/resources/: icon.icns
electron/resources/python-standalone/: .python-version
electron/scripts/: download-python.sh  download-redis.sh
electron/src/main/: api-server.ts  browser-manager.ts  context-bridge.ts  debug-trace.ts  machine-manager.ts  main.ts  preload.ts  pty-manager.ts  window-registry.ts
electron/src/renderer/: App.tsx  main.tsx  vite-env.d.ts
electron/src/shared/: context.d.ts  context.d.ts.map  context.js  context.js.map  context.ts
hester/: .env.local.template  CLAUDE.md  __init__.py  __main__.py  deploy-hester-slack.sh
hester/cli/: __init__.py  agent.py  ask.py  brief.py  chat.py  context.py  crypto_utils.py  daemon.py  db.py  devops.py  docs.py  git.py  ideas.py  main.py  mcp.py  orchestrate.py  redis.py  registry.py  session.py  slack.py  workstream.py
hester/context/: __init__.py  models.py  prompts.py  service.py  sources.py
hester/daemon/: __init__.py  agent.py  lee_client.py  main.py  models.py  prepare.py  redis_manager.py  session.py  settings.py  thinking_depth.py
hester/daemon/knowledge/: __init__.py  buffer.py  engine.py  git_watcher.py  proactive_watcher.py  store.py  task_watcher.py
hester/daemon/plugins/: __init__.py  loader.py  models.py  test_models.py
hester/daemon/proactive/: __init__.py  config_manager.py  models.py
hester/daemon/registries/: __init__.py  agents.yaml  models.py  prompts.yaml
hester/daemon/semantic/: __init__.py  base.py  embeddings.py  factory.py  registry.py  router.py
hester/daemon/tasks/: __init__.py  claude_delegate.py  code_explorer_delegate.py  context_bundle_delegate.py  db_explorer_delegate.py  docs_manager_delegate.py  executor.py  models.py  planner.py  store.py  test_runner_delegate.py  tools.py  web_researcher_delegate.py
hester/daemon/tools/: __init__.py  base.py  context_tools.py  copywriting_tools.py  db_tools.py  devops_tools.py  doc_tools.py  file_read.py  file_search.py  git_tools.py  orchestrate_tools.py  redis_tools.py  scoping.py  summarize.py  ui_control.py  visualization_tools.py  web_search.py  workstream_tools.py
hester/daemon/tui/: __init__.py  completers.py  constants.py  display.py  models.py  rendering.py  runner.py  selectors.py  utils.py
hester/daemon/workstream/: __init__.py  gemini.py  hooks.py  models.py  orchestrator.py  routes.py  slicer.py  store.py  telemetry.py  warehouse.py
hester/db/: postgres_mcp_server.py
hester/devops/: __init__.py  manager.py  tui.py
hester/docs/: __init__.py  agent.py  embeddings.py  models.py
hester/logs/: welcome_Engaged User_20260101_224540.md  welcome_Engaged User_20260101_224710.md
hester/mcp/: __init__.py  server.py
hester/shared/: __init__.py  gemini_tools.py  surfaces.py
host/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
host/scripts/: check-python.js
host/src/: App.ts  index.ts
host/src/api/: server.ts
(+84 files in other folders)
